resolve all